[metadata]
name = telegram-grabber
version = 0.0.1
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = Tools to interact with Telegram
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/telegram-grabber
license = MIT
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
python_requires = >=3.11
install_requires =
    pyrogram
    tgcrypto

[options.entry_points]
console_scripts =
    telegram-grabber = telegram_grabber.app:run
