[metadata]
name = telegram-explorer
version = 0.0.1
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = Tools to explore with Telegram
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/telegram-explorer
license = MIT
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
python_requires = >=3.11
install_requires =
    click
    pyrogram
    tgcrypto
    ttkthemes
    tkcalendar

[options.entry_points]
console_scripts =
    telegram-explorer = telegram_explorer.gui.app:run
    telegram-history  = telegram_explorer.cli.telegram_history:cli
