[metadata]
name = telegram-explorer
version = 0.5.0
author = Sergii Lovygin
author_email = sergey.lovygin@yahoo.com
summary = Tools to explore with Telegram
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanykey/telegram-explorer
license = MIT
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent

[options]
python_requires = >=3.11
install_requires =
    click
    pyrogram
    tgcrypto
    ttkthemes
    tkcalendar

[options.entry_points]
console_scripts =
    telegram-history    = telegram_explorer.cli.telegram_history:cli

    tge-config-editor   = telegram_explorer.gui.applications:run_settings_editor
    tge-session-creator = telegram_explorer.gui.applications:run_session_creator
    telegram-explorer   = telegram_explorer.gui.applications:run_telegram_explorer
